@@ -1,3 +1,4 @@
+* Make datetimepicker locale aware
 * Restore tab default order when no manual change
 * Add support for column sorting
 * Manage confirm attribute on buttons
